latest test report

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -155,9 +155,9 @@ For documentation on this error, please visit: https://selenium.dev/exceptions/#
 Build info: version: &apos;4.1.4&apos;, revision: &apos;535d840ee2&apos;
 System info: host: &apos;D-MK001&apos;, ip: &apos;192.168.1.36&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;16.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [54de103fe0d220900c43e93a8574e8be, findElement {using=css selector, value=div.main-content.supports-fontface.l-pos-relative.u-overflow-hidden.c-c-w100:nth-child(3) section.t-center.section-hero.section-hero--domains.section-domain-navigation.p-bottom-0.u-overflow-hidden.p-top-16.blur:nth-child(1) div.container-l.p-x-1.p-x-4__m.p-x-10__l.m-bottom-10.z-1.l-pos-relative.p-bottom-3.t-bold:nth-child(2) form.form-standard.js-domain-search-init.js-domain-search-redirect.l-pos-relative.z-1 div.domain-results div.exact-tlds.tlds-section.slidein div.result-row.exact-result.sale-tld &gt; p:nth-child(2)}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 101.0.4951.54, chrome: {chromedriverVersion: 101.0.4951.41 (93c720db8323..., userDataDir: C:\Users\vsabu\AppData\Loca...}, goog:chromeOptions: {debuggerAddress: localhost:54674}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:54674/devtoo..., se:cdpVersion: 101.0.4951.54, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Session ID: 54de103fe0d220900c43e93a8574e8be
+Command: [ba440c527a6ee61b5fec8a4cb1bd421f, findElement {using=css selector, value=div.main-content.supports-fontface.l-pos-relative.u-overflow-hidden.c-c-w100:nth-child(3) section.t-center.section-hero.section-hero--domains.section-domain-navigation.p-bottom-0.u-overflow-hidden.p-top-16.blur:nth-child(1) div.container-l.p-x-1.p-x-4__m.p-x-10__l.m-bottom-10.z-1.l-pos-relative.p-bottom-3.t-bold:nth-child(2) form.form-standard.js-domain-search-init.js-domain-search-redirect.l-pos-relative.z-1 div.domain-results div.exact-tlds.tlds-section.slidein div.result-row.exact-result.sale-tld &gt; p:nth-child(2)}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 101.0.4951.54, chrome: {chromedriverVersion: 101.0.4951.41 (93c720db8323..., userDataDir: C:\Users\vsabu\AppData\Loca...}, goog:chromeOptions: {debuggerAddress: localhost:61876}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:61876/devtoo..., se:cdpVersion: 101.0.4951.54, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Session ID: ba440c527a6ee61b5fec8a4cb1bd421f
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
@@ -172,7 +172,7 @@ Session ID: 54de103fe0d220900c43e93a8574e8be
 	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:70)
 	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:39)
 	at jdk.proxy2/jdk.proxy2.$Proxy20.getText(Unknown Source)
-	at com.dreamhost.testcase.SearchDomain.serachDomains_UnregisteredDomainShouldShowAvailable(SearchDomain.java:32)
+	at com.dreamhost.testcase.SearchDomain.serachDomains_UnregisteredDomainShouldShowAvailable(SearchDomain.java:34)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
 	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
@@ -181,7 +181,7 @@ Session ID: 54de103fe0d220900c43e93a8574e8be
 ... Removed 23 stack frames
 </div> <!-- stack-trace -->
                   <em>
-(his method checks the domain availability, It deliberately checks an available domain and verifies the error message, This test should fail)                  </em>
+(This method checks the domain availability, It deliberately checks an available domain and verifies the error message, This test should fail)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -281,20 +281,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'serachDomains_UnregisteredDomainShouldShowAvailable')
 data.setCell(0, 2, 'com.dreamhost.testcase.SearchDomain')
-data.setCell(0, 3, 16770);
+data.setCell(0, 3, 17895);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'registerDomain_ShouldFillAllTheInfoAndCardShouldReject')
 data.setCell(1, 2, 'com.dreamhost.testcase.RegisterDomain')
-data.setCell(1, 3, 15997);
+data.setCell(1, 3, 16595);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'serachDomains_GoogleShouldNotShowAvailable')
 data.setCell(2, 2, 'com.dreamhost.testcase.SearchDomain')
-data.setCell(2, 3, 6804);
+data.setCell(2, 3, 7013);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 51 seconds</span>
+              <span class="suite-total-time">Total running time: 54 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -336,39 +336,39 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">setProperty(chrome, org.testng.TestRunner@4681c175)</span>
-                <span class="method-start">22 ms</span>
+                <span class="method-start">32 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">registerDomain_ShouldFillAllTheInfoAndCardShouldReject</span>
-                <span class="method-start">4526 ms</span>
+                <span class="method-start">4570 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.dreamhost.testcase.SearchDomain</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setProperty(chrome, org.testng.TestRunner@4681c175)</span>
-                <span class="method-start">20693 ms</span>
+                <span class="method-start">21315 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">serachDomains_GoogleShouldNotShowAvailable</span>
-                <span class="method-start">23759 ms</span>
+                <span class="method-start">24924 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setProperty(chrome, org.testng.TestRunner@4681c175)</span>
-                <span class="method-start">30926 ms</span>
+                <span class="method-start">32317 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">serachDomains_UnregisteredDomainShouldShowAvailable</span>
-                <span class="method-start">34560 ms</span>
+                <span class="method-start">36226 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.dreamhost.testcase.RegisterDomain</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">CleanUp</span>
-                <span class="method-start">51649 ms</span>
+                <span class="method-start">54454 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
